# libcon2020

./: CMakeLists.txt  README.md  compile.bat  generateheader.py  install.bat  makefile  testinstall.bat
.github/workflows/: test.yml
examples/: cexample.c  cppexample.cc
include/: con2020.h  con2020.test.h  con2020c.h  libcon2020.h  libcon2020c.h
src/: CMakeLists.txt  bessel.cc  bessel.h  clip.h  compile.bat  compileobj.bat  con2020.cc  con2020.h  flux.cc  flux.h  generateheader.cc  libcon2020.cc  libcon2020.h  lmic.cc  lmic.h  makefile  polyeval.cc  polyeval.h  scalarpot.cc  scalarpot.h  sgn.h  smoothd.cc  smoothd.h  trap.cc  trap.h  trimstring.cc  trimstring.h
test/: CMakeLists.txt  bessel  bessel.cc  con2020_model_rtp.pro  con2020_model_xyz.pro  con2020_test_data.json  lmic.py  makefile  save_test_data.cc  savebessel.py  savecon2020.pro  savetestdata  savetestdata.cc  savetestdata.h  testbessel  testc  testc.c  testc.cc  testcc  testdata.cc  testdata.h  tests  tests.cc  tests.h  testsmooth.py
test/unit/: bessel.cc  model_output.cc
